[package]
name = "ico_memory"
version = "0.1.0"
authors = ["Brian Kehrer <brian.kehrer@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/birdimus/ico_memory"
readme = "README.md"
categories = ["no-std", "game-engines"]
keywords = ["alloc"]

[dependencies]
libc = {version ="0.2.61", default-features = false }

[lib]
name = "ico_memory"
crate-type = ["lib"]

[profile.dev]
opt-level = 3
panic = "abort"

[profile.test]
opt-level = 3

[profile.release]
panic = "abort"

[features]
#std = []
#default = ["std"]